--- a/style.css
+++ b/style.css
@@ -34,7 +34,17 @@ text-align: center;
 padding: 0 30px 30px;
 color: #333;
 visibility: hidden;
+transition: transform 0.4s, top 0.4s;
 }
+.open-popup{
+    visibility: visible;
+    top: 50%;
+    transform: translate(-50%, -50%) scale(1);
+
+}
+
+
+
 .popup img{
     width: 100px;
     margin-top: -50px;
